<resources>
    <string name="app_name">Serpientes de Antioquia</string>
    <string name="SerpentarioApp">Serpientes de Antioquia</string>
    <string name="sign_in_with_google">Iniciar Sesión</string>
    <string name="id">Id</string>
    <string name="name">Usuario</string>
    <string name="email_address">Correo</string>
    <string name="sign_out">Cerrar Sesión</string>
    <string name="Usuario">Usuario</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="option">Serpientes de Antioquia</string>
    <string name="TomarFoto">Tomar Foto</string>
    <string name="Guardar">Guardar</string>
    <string name="Nombre">Nombre común</string>
    <string name="Tama">Tamaño aproximado (cm)</string>
    <string name="Title">Title CardView</string>
    <string name="Description">Información sobre entidades responsables.</string>
    <string name="Tipo">Tipo</string>
    <string name="Venenosa">Venenosa</string>
    <string name="NoVenenosa">No Venenosa</string>
    <string name="Viva">Viva</string>
    <string name="Estado">"Estado "</string>
    <string name="Muerta">Muerta</string>
    <string name="Lugar">Lugar</string>
    <string name="Vivienda">Vivienda</string>

    <string name="Cultivo">Cultivo</string>
    <string name="Potrero">Potrero</string>
    <string name="Bosque">Bosque</string>
    <string name="Quebrada">Quebrada </string>


    <string name="Ambiente">Ambiente</string>
    <string name="Soleado">Soleado</string>
    <string name="Nublado">Nublado</string>
    <string name="Lluvioso">Lluvioso</string>
    <string name="Carretera">Carretera</string>
    <string name="Campo">Campo</string>
    <string name="Arbol">Arbol</string>
    <string name="Observaciones">Observaciones</string>
    <string name="Coordenadas">Coordenadas:</string>
    <string name="Calificacion">Califica la Aplicación</string>
    <string name="Inicio">Inicio</string>
    <string name="Infornmacion">Información</string>
    <string name="EntidadesResp">Entidades responsables</string>
    <string name="Alertas">Alertas</string>
    <string name="Configuracion">Configuración</string>
    <string name="CerrarS">Cerrar sesión</string>
    <string name="Información">Información Entidades</string>
    <string name="Justificación">Justificación de la aplicación</string>
    <string name="Description1">Razones y objetivos de la aplicación</string>
    <string name="GuíaUso">Guía de identificación</string>
    <string name="Description2">Serpientes de Antioquia, importancia de la conservación</string>
    <string name="GuiaIdenti">Guía de identificación</string>
    <string name="Description3">Guía para reconocimiento de serpientes venenosas</string>
    <string name="DescriEspe">Descripción de especies</string>
    <string name="Description4">Descripción de las especies de serpientes venenosas</string>
    <string name="Description5">Guía para reconocimiento de serpientes no venenosas</string>
    <string name="Description6">Descripción de las especies de serpientes no venenosas</string>
    <string name="ClinicaOfci">Manifestaciones clínicas</string>
    <string name="Description7">Manifestaciones clínicas del accidente ofídico</string>
    <string name="InfoOfi">Información de accidentes</string>
    <string name="Description8">Información sobre el accidente ofídico</string>
    <string name="Prevención">Prevención de accidentes</string>
    <string name="Description9">Metódos de prevención del accidente ofídico</string>
    <string name="Inderterminado">No sabe</string>
    <string name="Longitud">Longitud:</string>
    <string name="Latitud">Latitud:</string>
    <string name="Avistamiento">Registro de Avistamientos</string>
    <string name="Accidente">Accidente ofídico</string>
    <string name="Alerta">Alerta de avistamiento</string>
    <string name="NoVeneno">Serpientes no venenosas</string>
    <string name="Veneno">Serpientes venenosas</string>
    <string name="AcercaApp">Acerca de la aplicación</string>
    <string name="InformaciónE">Información entidades</string>
    <string name="title_activity_maps">Avistamientos</string>
</resources>