<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AvistamientoActivity"
    android:padding="20dp"
    android:orientation="vertical"
    android:layout_centerHorizontal="true">

    <ImageView
        android:id="@+id/imageViewFoto"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="8dp"
        android:src="@mipmap/icono_serpiente_login_foreground">
    </ImageView>

    <EditText
        android:id="@+id/NombreSerp"
        android:layout_width="match_parent"
        android:layout_height="39dp"
        android:hint="@string/Nombre"
        android:textColorHint="@color/GreenU1" />

    <EditText
        android:id="@+id/TamaSerp"
        android:layout_width="match_parent"
        android:layout_height="39dp"
        android:hint="@string/Tama"
        android:textColorHint="@color/GreenU1" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:paddingEnd="30dp"
        android:paddingStart="0dp"
        android:paddingRight="30dp"
        android:paddingLeft="0dp">

        <TextView
            android:id="@+id/tV_voz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_gravity="start"
            android:text="Venenosa"
            tools:ignore="RtlCompat" />

        <Switch
            android:id="@+id/switch_voz"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_gravity="end"
            tools:ignore="RtlCompat,UseSwitchCompatOrMaterialXml" />
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:paddingEnd="30dp"
        android:paddingStart="0dp"
        android:paddingLeft="0dp"
        android:paddingRight="30dp">

        <TextView
            android:id="@+id/viva"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_gravity="start"
            android:text="Viva"
            tools:ignore="RtlCompat" />

        <Switch
            android:id="@+id/switch_viva"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_gravity="end"
            tools:ignore="RtlCompat,UseSwitchCompatOrMaterialXml" />
    </RelativeLayout>


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp">


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="10dp">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Ambiente"
                android:layout_weight="1"
                android:textColor="@color/GreenU" />

            <RadioButton
                android:id="@+id/Soleado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Soleado" />

            <RadioButton
                android:id="@+id/Nublado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Nublado" />

            <RadioButton
                android:id="@+id/Lluvioso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Lluvioso" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Lugar"
                android:layout_weight="1"
                android:textColor="@color/GreenU"/>

            <RadioButton
                android:id="@+id/Vivienda"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Vivienda" />

            <RadioButton
                android:id="@+id/Carretera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Carretera" />


            <RadioButton
                android:id="@+id/Campo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Campo" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </TableLayout>


    <EditText
        android:id="@+id/Observaciones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Observaciones"
        android:inputType="textMultiLine"
        android:textColorHint="@color/GreenU1"
        android:layout_marginBottom="2dp"/>

    <TextView
        android:id="@+id/Coordenadas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/GreenU1"
        android:textSize="10dp" />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:fitsSystemWindows="true">


        <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/BtnTomarFoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            card_view:cardCornerRadius="6dp"
            android:layout_gravity="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center">


                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:padding="4dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/icono_opencamara" />

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="3"
                    android:padding="8dp"
                    android:layout_gravity="center_vertical"
                    android:text="@string/TomarFoto"
                    android:textColor="#222"
                    android:textStyle="bold"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/BtnGuardar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            card_view:cardCornerRadius="6dp"
            android:layout_gravity="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center">


                <ImageView
                    android:id="@+id/iV_audio"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:padding="4dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/icono_save" />

                <TextView
                    android:id="@+id/tV_audio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="3"
                    android:padding="8dp"
                    android:layout_gravity="center_vertical"
                    android:text="@string/Guardar"
                    android:textColor="#222"
                    android:textStyle="bold"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>



</LinearLayout>
